# DZinf

./: CMakeLists.txt  main.cpp
1/: 11.cpp  12.cpp  13.cpp  14.cpp  15.cpp
2/: 21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
3/: 31.cpp  32.cpp  33.cpp  33.txt  34.cpp  35.cpp
4/: 41.cpp  41.txt  42.cpp  43.cpp  44.cpp  45.cpp  46.cpp  47.cpp  48.cpp  49.cpp
5/: 51.cpp  52.cpp  obrabotky_1(27).cpp  obrabotky_2(15).cpp  ryady_1(39).cpp  ryady_2(44).cpp
