cmake_minimum_required(VERSION 3.29)
project(testik)

set(CMAKE_CXX_STANDARD 20)

add_executable(testik 1/11.cpp)
add_executable(testik2 1/12.cpp)
add_executable(testik3 1/13.cpp)
add_executable(testik4 1/14.cpp)
add_executable(testik5 1/15.cpp)
add_executable(testik6 2/21.cpp)
add_executable(testik7 2/22.cpp)
add_executable(testik8 2/23.cpp)
add_executable(testik9 2/24.cpp)
add_executable(testik10 2/25.cpp)
add_executable(testik11 3/31.cpp)
add_executable(testik12 3/32.cpp)
add_executable(testik13 3/33.cpp)
add_executable(testik14 3/34.cpp)
add_executable(testikmain main.cpp)
add_executable(testik41 4/41.cpp)
add_executable(testik42 4/42.cpp)
add_executable(testik43 4/43.cpp)
add_executable(testik44 4/44.cpp)
add_executable(testik45 4/45.cpp)
add_executable(testik46 4/46.cpp)
add_executable(testik47 4/47.cpp)