cmake_minimum_required(VERSION 3.29)
project(testik)

set(CMAKE_CXX_STANDARD 20)

add_executable(testik 1/11.cpp)
add_executable(testik2 1/12.cpp)
add_executable(testik3 1/13.cpp)
add_executable(testik4 1/14.cpp)
add_executable(testik5 1/15.cpp)
add_executable(testik6 2/21.cpp)
add_executable(testik7 2/22.cpp)
add_executable(testik8 2/23.cpp)
add_executable(testik9 2/24.cpp)
add_executable(testik10 2/25.cpp)
add_executable(testik11 3/31.cpp)
add_executable(testik12 3/32.cpp)
add_executable(testik13 3/33.cpp)
add_executable(testik14 3/34.cpp)
add_executable(testikmain main.cpp)
add_executable(testik41 4/41.cpp)
add_executable(testik42 4/42.cpp)
add_executable(testik43 4/43.cpp)
add_executable(testik44 4/44.cpp)
add_executable(testik45 4/45.cpp)
add_executable(testik46 4/46.cpp)
add_executable(testik47 4/47.cpp)
add_executable(testik35 3/35.cpp)
add_executable(testik48 4/48.cpp)
add_executable(testik49 4/49.cpp)
add_executable(testik51 5/51.cpp)
add_executable(testik52 5/52.cpp)
add_executable(testik53 "5/ryady_1(39).cpp")
add_executable(testik54 "5/ryady_2(44).cpp")
add_executable(testik55 "5/obrabotky_1(27).cpp")
add_executable(testik56 "5/obrabotky_2(15).cpp")
